Upgrade to Java 10 and AWS Parameter Store for configuration